@@ -166,3 +166,5 @@ caption test #7 [[Image:Test Image.jpg|thumb|Caption with a [http://example.com/
 caption test #8 [[Image:Test Image.jpg|thumb|Test [[ Caption]]
 
 caption test #9 [[Image:Test Image.jpg|thumb|Test ]] Caption]]
+
+caption test #10 [[Image:Test Image.jpg|thumb|caption1|caption2]]
